# eomneunmal

./: .gitattributes  .gitignore  README.md  index.html  overlay.html  package-lock.json  package.json
docs/: architecture.md  compatibility-matrix.md  privacy.md  provider-auth.md  release-readiness.md
scripts/: build-placeholder.js  dev-placeholder.js
src/: main.js  overlay-window.js  styles.css  ui-state.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  runtime.rs
src-tauri/src/core/: candidate.rs  diagnostics.rs  harness.rs  mod.rs  overlay.rs  overlay_controller.rs  pipeline.rs  prompt.rs  provider.rs  secret_boundary.rs  sensitivity.rs  settings.rs  types.rs
src-tauri/src/platform/: adapter.rs  integration.rs  macos.rs  mod.rs  probe.rs  windows.rs
tests/frontend/: ui-state.test.js
